添加K8s应用管理功能API
