# server/cmd/datas/casbins.go
@@ -53,7 +53,8 @@ var Carbines = []gormadapter.CasbinRule{
 	{PType: "p", V0: "888", V1: "/user/setUserInfo", V2: "PUT"},
 	{PType: "p", V0: "888", V1: "/email/emailTest", V2: "POST"},
 	{PType: "p", V0: "888", V1: "/k8sNamespaces/findK8sNamespaces", V2: "GET"},
-	{PType: "p", V0: "888", V1: "/k8sNamespaces/getK8sNamespacesList", V2: "GET"},
+	{PType: "p", V0: "888", V1: "/k8sNamespaces/getK8sNamespacesList", V2: "POST"},
+	{PType: "p", V0: "888", V1: "/k8sDeployments/getK8sDeploymentList", V2: "GET"},
 	{PType: "p", V0: "8881", V1: "/base/login", V2: "POST"},
 	{PType: "p", V0: "8881", V1: "/user/register", V2: "POST"},
 	{PType: "p", V0: "8881", V1: "/api/createApi", V2: "POST"},
