# server/docs/swagger.json
@@ -865,7 +865,7 @@
                 }
             }
         },
-        "/k8sNamespaces/createK8sNamespaces": {
+        "/k8sDeployments/createK8sDeployment": {
             "post": {
                 "security": [
                     {
@@ -879,17 +879,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "K8sNamespaces"
+                    "K8sDeployment"
                 ],
-                "summary": "创建K8sNamespaces",
+                "summary": "创建K8sDeployment",
                 "parameters": [
                     {
-                        "description": "创建K8sNamespaces",
+                        "description": "创建K8sDeployment",
                         "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.K8sNamespaces"
+                            "$ref": "#/definitions/model.K8sDeployment"
                         }
                     }
                 ],
@@ -903,7 +903,7 @@
                 }
             }
         },
-        "/k8sNamespaces/deleteK8sNamespaces": {
+        "/k8sDeployments/deleteK8sDeployment": {
             "delete": {
                 "security": [
                     {
@@ -917,17 +917,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "K8sNamespaces"
+                    "K8sDeployment"
                 ],
-                "summary": "删除K8sNamespaces",
+                "summary": "删除K8sDeployment",
                 "parameters": [
                     {
-                        "description": "删除K8sNamespaces",
+                        "description": "删除K8sDeployment",
                         "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.K8sNamespaces"
+                            "$ref": "#/definitions/model.K8sDeployment"
                         }
                     }
                 ],
@@ -941,7 +941,7 @@
                 }
             }
         },
-        "/k8sNamespaces/deleteK8sNamespacesByIds": {
+        "/k8sDeployments/deleteK8sDeploymentByIds": {
             "delete": {
                 "security": [
                     {
@@ -955,12 +955,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "K8sNamespaces"
+                    "K8sDeployment"
                 ],
-                "summary": "批量删除K8sNamespaces",
+                "summary": "批量删除K8sDeployment",
                 "parameters": [
                     {
-                        "description": "批量删除K8sNamespaces",
+                        "description": "批量删除K8sDeployment",
                         "name": "data",
                         "in": "body",
                         "required": true,
@@ -972,6 +972,120 @@
                 "responses": {
                     "200": {
                         "description": "{\"success\":true,\"data\":{},\"msg\":\"批量删除成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/k8sDeployments/findK8sDeployment": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "K8sDeployment"
+                ],
+                "summary": "用id查询K8sDeployment",
+                "parameters": [
+                    {
+                        "description": "用id查询K8sDeployment",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.K8sDeployment"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"查询成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/k8sDeployments/getK8sDeploymentList": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "K8sDeployment"
+                ],
+                "summary": "分页获取K8sDeployment列表",
+                "parameters": [
+                    {
+                        "description": "分页获取K8sDeployment列表",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.K8sDeploymentSearch"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"获取成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/k8sDeployments/updateK8sDeployment": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "K8sDeployment"
+                ],
+                "summary": "更新K8sDeployment",
+                "parameters": [
+                    {
+                        "description": "更新K8sDeployment",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.K8sDeployment"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"更新成功\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -1018,7 +1132,7 @@
             }
         },
         "/k8sNamespaces/getK8sNamespacesList": {
-            "get": {
+            "post": {
                 "security": [
                     {
                         "ApiKeyAuth": []
@@ -1048,44 +1162,6 @@
                 "responses": {
                     "200": {
                         "description": "{\"success\":true,\"data\":{},\"msg\":\"获取成功\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/k8sNamespaces/updateK8sNamespaces": {
-            "put": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "K8sNamespaces"
-                ],
-                "summary": "更新K8sNamespaces",
-                "parameters": [
-                    {
-                        "description": "更新K8sNamespaces",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.K8sNamespaces"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{\"success\":true,\"data\":{},\"msg\":\"更新成功\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -2084,12 +2160,35 @@
                 }
             }
         },
+        "model.K8sDeployment": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "deployment": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "namespace": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "time": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
         "model.K8sNamespaces": {
             "type": "object",
             "properties": {
-                "age": {
-                    "type": "string"
-                },
                 "createdAt": {
                     "type": "string"
                 },
@@ -2100,6 +2199,9 @@
                     "type": "string"
                 },
                 "status": {
+                    "type": "string"
+                },
+                "time": {
                     "type": "string"
                 },
                 "updatedAt": {
@@ -2385,12 +2487,41 @@
                 }
             }
         },
+        "request.K8sDeploymentSearch": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "deployment": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "namespace": {
+                    "type": "string"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "pageSize": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "time": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
         "request.K8sNamespacesSearch": {
             "type": "object",
             "properties": {
-                "age": {
-                    "type": "string"
-                },
                 "createdAt": {
                     "type": "string"
                 },
@@ -2407,6 +2538,9 @@
                     "type": "integer"
                 },
                 "status": {
+                    "type": "string"
+                },
+                "time": {
                     "type": "string"
                 },
                 "updatedAt": {
