# server/model/request/k8s_deployments.go
@@ -1,0 +1,8 @@
+package request
+
+import "gin-vue-admin/model"
+
+type K8sDeploymentSearch struct{
+    model.K8sDeployment
+    PageInfo
+}
